basic ui for iam
